Correction de la faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 compétences et connaissances développées lors de mes études. Vous trouverez également les déscriptifs
                 des
                 projets et
-                travaux que j’ai pu effectués et ceux réalisés en auto-apprentissage. Enfin vous trouverez dans le pied
+                travaux que j’ai pu effectuer et ceux réalisés en auto-apprentissage. Enfin vous trouverez dans le pied
                 de page des informations permettant de me contacter et les
                 liens vers mon Github et Linkedin.</p>
             <h3>Qui suis-je ?</h3>
