--- a/synthese.html
+++ b/synthese.html
@@ -41,7 +41,10 @@
             <h1>Le tableau de synthèse</h1>
 
             <section class="image-acceuil">
-                <img src="images/Tableau de synthèse Mathys V1.jpg" alt="Mon CV">
+                <img src="images/TBS.png" alt="Le Tableau de Synthèse">
+                <a href="syntheseEx.html">
+                    <p>Cliquez ici pour avoir le tableau en plus grand et net</p>
+                </a>
             </section>
         </header>
     </section>
