--- a/btsSelect.html
+++ b/btsSelect.html
@@ -20,14 +20,11 @@
             <a href="index.html">
                 <li>Présentation</li>
             </a>
-            <a href="ProjectSelect.html">
-                <li>Les projets</li>
+            <a href="btsSelect.html">
+                <li>Mon BTS SIO</li>
             </a>
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
-            </a>
-            <a href="StageSelect.html">
-                <li>Stage</li>
             </a>
             <a href="mesMontages.html">
                 <li>Mes montages vidéos</li>
@@ -36,8 +33,8 @@
         </ul>
     </nav>
 
-    <section class="ProjectSelect.html">
-        <a href="Projet_Cours.html">
+    <section class="page-content">
+        <a href="ProjectSelect.html">
             <h1>- Les Projets</h1>
         </a>
         <br>
