--- a/mesMontages.html
+++ b/mesMontages.html
@@ -20,14 +20,11 @@
             <a href="index.html">
                 <li>Présentation</li>
             </a>
-            <a href="ProjectSelect.html">
-                <li>Les projets</li>
+            <a href="btsSelect.html">
+                <li>Mon BTS SIO</li>
             </a>
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
-            </a>
-            <a href="StageSelect.html">
-                <li>Stage</li>
             </a>
             <a href="mesMontages.html">
                 <li>Mes montages vidéos</li>
@@ -47,6 +44,21 @@
                 court-métrage difficile. J'ai ainsi effectué le montage de ce court métrage.</p>
 
             <p>Vous pouvez voir ce court-métrage en <a href="https://www.youtube.com/watch?v=GxIyxjB-194"><B>cliquant
+                        sur ce
+                        lien.</B></a>
+
+                <br>
+                <br>
+            <h3>Mon projet inachevé de vidéos sur Youtube</h3>
+            <p>Durant mon temps libre, j'avais eu pour idée de me lancer dans la création d'une chaîne Youtube dédié à
+                des vidéos explicatives sur des jeux vidéos qui me tenaient à coeur. Ainsi j'ai publié une vidéo sur
+                Youtube qui devait être le premier épisode d'une suite de vidéos consacré au jeu MMORPG Tycoon 2. Les
+                vidéos auraient eu pour but d'expliquer le fonctionnement du jeu en prenant pour exemple une partie que
+                je maintenais au cours des vidéos. Hors, par manque de temps et par détachement, je n'ai jamais donné
+                suite à ce projet. Néanmoins il reste la première et seule vidéo que j'ai réalisé entièrement seul
+                (autant le montage que l'enregistrement,...).</p>
+
+            <p>Vous pouvez retrouver cette vidéo en <a href="https://www.youtube.com/watch?v=j58nwYJ3Cvk"><B>cliquant
                         sur ce
                         lien.</B></a>
 
