--- a/Project_TutoUnity.html
+++ b/Project_TutoUnity.html
@@ -20,17 +20,14 @@
             <a href="index.html">
                 <li>Présentation</li>
             </a>
-            <a href="ProjectSelect.html">
-                <li>Les projets</li>
+            <a href="btsSelect.html">
+                <li>Mon BTS SIO</li>
             </a>
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
             </a>
-            <a href="StageSelect.html">
-                <li>Stage</li>
-            </a>
-            <a href="synthese.html">
-                <li>Tableau de Synthèse</li>
+            <a href="mesMontages.html">
+                <li>Mes montages vidéos</li>
             </a>
 
         </ul>
