--- a/index.html
+++ b/index.html
@@ -20,17 +20,14 @@
             <a href="index.html">
                 <li>Présentation</li>
             </a>
-            <a href="ProjectSelect.html">
-                <li>Les projets</li>
+            <a href="btsSelect.html">
+                <li>Mon BTS SIO</li>
             </a>
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
             </a>
-            <a href="StageSelect.html">
-                <li>Stage</li>
-            </a>
-            <a href="synthese.html">
-                <li>Tableau de Synthèse</li>
+            <a href="mesMontages.html">
+                <li>Mes montages vidéos</li>
             </a>
 
         </ul>
@@ -40,58 +37,49 @@
         <header>
             <h1>Portfolio de Mathys Gelez</h1>
             <h3>Bienvenue !</h3>
-            <p>Bienvenue sur mon portfolio ! Ce site vous permet d’acquérir des informations sur moi tels que les
+            <p>Bienvenue sur mon portfolio ! Ce site vous permet d’acquérir des informations supplémentaires sur moi
+                tels que les
                 compétences et connaissances développées lors de mes études. Vous trouverez également les déscriptifs
                 des
                 projets et
-                travaux que j’ai pu effectuer et ceux réalisés en auto-apprentissage. Enfin vous trouverez dans le pied
-                de page des informations permettant de me contacter et les
-                liens vers mon Github et Linkedin.</p>
+                travaux que j’ai pu effectuer et ceux réalisés en auto-apprentissage. Enfin, vous trouverez dans le pied
+                de page des informations permettant de me contacter.</p>
             <h3>Qui suis-je ?</h3>
-            <p>Je suis <B>Mathys Gelez</B>, j’ai 20 ans et je suis actuellement étudiant en deuxième année de BTS SIO
-                (Service
-                Informatique aux Organisations) option SLAM (solutions logicielles et applications métiers) au lycée
-                Dampierre à Valenciennes.</p>
-
+            <p>Je suis <B>Mathys Gelez</B>, j’ai 21 ans. J'ai décroché mon BTS SIO (Services informatiques aux
+                organisations) option SLAM (Solutions Logicielles et Applications Métiers) en Juin 2023 et j'effectue
+                actuellement
+                un service civique pour l'organisme Uniscité à l'antenne de Valenciennes dans le domaine du Cinéma du 15
+                Octobre 2023 au 15 Juin 2024.</p>
             <h3>Mon projet d'avenir</h3>
-            <p>En commençant mon BTS j’avais l’ambition de devenir concepteur de site web. Mais je me suis rendu compte
-                que le domaine du développement web ne m’intéressait pas autant que je l’aurais espéré et que je
-                m’épanouissais bien plus en développant des petits jeux en Java. Étant moi-même un passionné de jeux
-                vidéos et ayant un véritable engouement pour la programmation orientée objet, je souhaiterais désormais
-                pouvoir devenir développeur dans le domaine des jeux vidéos.</p>
-
-            <h3>Mes connaissances en programmation/informatique</h3>
-            <ul>
-                <li>- Unity (J'ai étudié les bases en auto-apprentissage via des tutoriels sur internet)</li>
-                <li>- Programmation Logiciel : Java, Scenebuilder, AndroidStudio</li>
-                <li>- Programmation web : HTML, CSS, JavaScript, PHP et Wordpress</li>
-                <li>- Conception de base de données : MySQL, MySQLWorkbench</li>
-                <li>- Système d'exploitation: Je connais quelques commandes de bases de Linux Ubuntu, CentOS, Kali</li>
-                <li>- Cybersécurité: Les différents types d'attaques informatiques, norme de sécurité pour protéger un
-                    site
-                    web, un serveur,...</li>
-                <li>- Montages de vidéo : Réalisation de montage sur VegasPro</li>
-            </ul>
+            <p>En commençant mon BTS j’avais l’ambition de devenir développeur. Je m'étais forgé l'idée que la
+                conception d'application ou de site internet me conviendrait. Malheureusement, ce ne fut pas réellement
+                le cas. Après avoir échoué au concours d'entrée d'une prestigieuse école de développement
+                de jeux vidéos, je fis un service civique pour me donner le temps de me réorienter pour trouver le
+                domaine qui me conviendrait le plus et qui
+                pourrait me correspondre réellement. Aujourd'hui, je suis convaincu que travailler dans le cinéma, est
+                ce
+                que je souhaite,
+                afin de vivre ma passion pleinement et utiliser mes connaissances déjà acquises.</p>
         </header>
-
-        <section class="image-acceuil">
-            <img src="images/acceuil.jpg" alt="Illustration programmation Web">
-        </section>
 
         <h3>Mes Loisirs</h3>
         <ul>
+            <li>- J'éprouve beaucoup de plaisir à réaliser des montages vidéos. Au début je ne les réalisais
+                que par simple divertissement pour des projets sur internet qui n'ont jamais abouti ou pour
+                amuser quelques amis. Mais avec le temps, mes connaissances se sont décuplées et mon savoir faire sur
+                l'outil Vegas Pro a déjà été réclamé pour contribuer à des petits projets, notamment durant mon service
+                civique pour lequel j'ai été le monteur d'un court métrage réalisé pour un concours. Vous pouvez
+                retrouver ici ces projets en <a href="mesMontages.html"><B>cliquant sur ce
+                        lien.</B></a></li>
+            <br>
+            <li>- Je joue de la guitare basse dans un groupe de musique. Je joue essentiellement du Rock mais j'aime
+                m'inspirer d'autres styles musicaux.</li>
+            <br>
             <li>- Je joue très souvent aux jeux vidéos. Je joue à différents styles de jeux mais ceux que j'apprécie le
                 plus restent les FPS coopératifs et solo, les RPG et les jeux d’horreurs. Mon jeu favori est Bioshock,
                 mais vous pouvez voir mes jeux préférés par catégorie en <a href="mesJeux.html"><B>cliquant sur ce
                         lien.</B></a>
             </li>
-            <br>
-            <li>- Je développe par passion, essayant de réaliser des petits jeux en Java ou Unity.</li>
-            <br>
-            <li>- Je joue de la guitare basse lorsque j’en ai le temps. Je m’entraîne en jouant des morceaux de Rock
-                en tout genre. Je sais notamment jouer Down Under de Men at Work.</li>
-            <br>
-            <li>- Je réalise des montages vidéos sur le logiciel VegasPro13.</li>
             <br>
 
         </ul>
