--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
                 retrouver ici ces projets en <a href="mesMontages.html"><B>cliquant sur ce
                         lien.</B></a></li>
             <br>
+            <li>- Je suis un passionné de cinéma. J'éprouve plus d'affection pour les films de sciences fictions et les
+                films d'horreurs mais j'aime voir des films de tout genre. Au delà de la simple intention de me
+                divertir, j'éprouve un immense plaisir à analyser ce que je perçois du film. Selon moi, le plus
+                important est le scénario. Il est primordial pour moi que le récit tienne la route, et je me prends
+                souvent au jeu d'essayer de déterrer les différents éléments du scénario qui font son efficacité (jouer
+                à la chasse aux "fusils de tchekhov ou aux macguffin par exemple"). En plus de cela, j'adore essayer de
+                visualiser la manière dont le film a pu être réalisé. C'est d'autant plus drôle avec les
+                vieux films qui utilisent des moyens beaucoup plus datées pour atteindre leurs objectifs (par exemple je
+                suis certain que "Jurassic Park" ou "Les Dents de la Mer" auraient été filmé d'une toute autre manière
+                s'ils avaient été réalisé aujourd'hui). Repérer un élément de mise en scène astucieux ou un plan
+                qui semble avoir été compliqué à tourner (je pense notamment aux plans séquences de certains films)
+                contribuent à me faire apprécier d'avantage les films. Ainsi, je suis un fan du 7e art. Vous pouvez voir
+                ici mes films et réalisateurs préférés <a href="mesFilms.html"><B>cliquant sur ce
+                        lien.</B></a></li>
+            <br>
             <li>- Je joue de la guitare basse dans un groupe de musique. Je joue essentiellement du Rock mais j'aime
                 m'inspirer d'autres styles musicaux.</li>
             <br>
