ajout court_metrage

--- a/mesMontages.html
+++ b/mesMontages.html
@@ -55,10 +55,25 @@
                 Youtube qui devait être le premier épisode d'une suite de vidéos consacré au jeu MMORPG Tycoon 2. Les
                 vidéos auraient eu pour but d'expliquer le fonctionnement du jeu en prenant pour exemple une partie que
                 je maintenais au cours des vidéos. Hors, par manque de temps et par détachement, je n'ai jamais donné
-                suite à ce projet. Néanmoins il reste la première et seule vidéo que j'ai réalisé entièrement seul
+                suite à ce projet. Néanmoins, il reste la première et seule vidéo que j'ai réalisée entièrement seul
                 (autant le montage que l'enregistrement,...).</p>
 
             <p>Vous pouvez retrouver cette vidéo en <a href="https://www.youtube.com/watch?v=j58nwYJ3Cvk"><B>cliquant
+                        sur ce
+                        lien.</B></a>
+
+                <br>
+                <br>
+            <h3>BONUS: Mon premier rôle dans un court-métrage: Psychopâtes</h3>
+            <p>J'ai eu l'occasion de tenir
+                le rôle principal d'un court métrage intitulé: "Psychopâtes", réalisé par des étudiants en cinéma.
+                C'était la première fois que je jouais devant
+                une caméra et j'ai adoré cela. Ce rôle m'a permis de participer à un tournage en condition réelle
+                avec du matériel pro (caméra, éclairage,...), dirigé par des personnes passionnées de
+                leur travail. Cette éxpérience m'a réellement donné envie de travailler dans le milieu du
+                cinéma. </p>
+
+            <p>Vous pouvez retrouver cette vidéo en <a href="https://www.youtube.com/watch?v=lQqkuB7D9ls"><B>cliquant
                         sur ce
                         lien.</B></a>
 
