--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
             </a>
-            <a href="mesMontages.html">
-                <li>Mes montages vidéos</li>
+            <a href="audiovisuelSelect.html">
+                <li>Audiovisuel</li>
+            </a>
+            <a href="videomapping.html">
+                <li>Video Mapping</li>
             </a>
 
         </ul>
@@ -38,18 +41,16 @@
             <h1>Portfolio de Mathys Gelez</h1>
             <h3>Bienvenue !</h3>
             <p>Bienvenue sur mon portfolio ! Ce site vous permet d’acquérir des informations supplémentaires sur moi
-                tels que les
+                telles que les
                 compétences et connaissances développées lors de mes études. Vous trouverez également les déscriptifs
                 des
                 projets et
                 travaux que j’ai pu effectuer et ceux réalisés en auto-apprentissage. Enfin, vous trouverez dans le pied
                 de page des informations permettant de me contacter.</p>
             <h3>Qui suis-je ?</h3>
-            <p>Je suis <B>Mathys Gelez</B>, j’ai 21 ans. J'ai décroché mon BTS SIO (Services informatiques aux
-                organisations) option SLAM (Solutions Logicielles et Applications Métiers) en Juin 2023 et j'effectue
-                actuellement
-                un service civique pour l'organisme Uniscité à l'antenne de Valenciennes dans le domaine du Cinéma du 15
-                Octobre 2023 au 15 Juin 2024.</p>
+            <p>Je suis <B>Mathys Gelez</B>, j’ai 22 ans. J'ai décroché mon BTS SIO (Services informatiques aux
+                organisations) option SLAM (Solutions Logicielles et Applications Métiers) en Juin 2023 et je suis
+                actuellement en formation des métiers du video mapping jusqu'au 18 Juillet 2025.</p>
             <h3>Mon projet d'avenir</h3>
             <p>En commençant mon BTS j’avais l’ambition de devenir développeur. Je m'étais forgé l'idée que la
                 conception d'application ou de site internet me conviendrait. Malheureusement, ce ne fut pas réellement
