--- a/btsSelect.html
+++ b/btsSelect.html
@@ -26,8 +26,11 @@
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
             </a>
-            <a href="mesMontages.html">
-                <li>Mes montages vidéos</li>
+            <a href="audiovisuelSelect.html">
+                <li>Audiovisuel</li>
+            </a>
+            <a href="videomapping.html">
+                <li>Video Mapping</li>
             </a>
 
         </ul>
