--- a/mesMontages.html
+++ b/mesMontages.html
@@ -26,8 +26,11 @@
             <a href="Mon_CV.html">
                 <li>Mon CV</li>
             </a>
-            <a href="mesMontages.html">
-                <li>Mes montages vidéos</li>
+            <a href="audiovisuelSelect.html">
+                <li>Audiovisuel</li>
+            </a>
+            <a href="videomapping.html">
+                <li>Video Mapping</li>
             </a>
 
         </ul>
@@ -35,7 +38,7 @@
 
     <section class="page-content">
         <header>
-            <h1>Les montages que j'ai réalisés</h1>
+            <h1>Montages que j'ai réalisés</h1>
             <h3>Le concours de court métrage "tête à clap" d'Uniscité</h3>
             <p>Lors de mon service civique, les volontaires chargés de la mission Cinéma & Citoyenneté ainsi que
                 moi-même
@@ -62,20 +65,6 @@
                         sur ce
                         lien.</B></a>
 
-                <br>
-                <br>
-            <h3>BONUS: Mon premier rôle dans un court-métrage: Psychopâtes</h3>
-            <p>J'ai eu l'occasion de tenir
-                le rôle principal d'un court métrage intitulé: "Psychopâtes", réalisé par des étudiants en cinéma.
-                C'était la première fois que je jouais devant
-                une caméra et j'ai adoré cela. Ce rôle m'a permis de participer à un tournage en condition réelle
-                avec du matériel pro (caméra, éclairage,...), dirigé par des personnes passionnées de
-                leur travail. Cette éxpérience m'a réellement donné envie de travailler dans le milieu du
-                cinéma. </p>
-
-            <p>Vous pouvez retrouver cette vidéo en <a href="https://www.youtube.com/watch?v=lQqkuB7D9ls"><B>cliquant
-                        sur ce
-                        lien.</B></a>
 
     </section>
 
